# TJU-cinea-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cinea-os.code-workspace  start.py
.cargo/: config
assets/: 2048 1024.rri  2048 128.rri  2048 16.rri  2048 2048.rri  2048 256.rri  2048 32.rri  2048 4.rri  2048 512.rri  2048 64.rri  2048 8.rri  2048.rli  2048.rri  2048_2.rri
dsk/sys/: helloworld.txt
src/: lib.rs  main.rs
src/allocator/: bump.rs  linked_list.rs  mod.rs
src/graphic/: color.rs  font.rs  mod.rs  text.rs  vbe.rs
src/gui/: cursor.rs  mod.rs  status_bar.rs
src/interrupts/: mod.rs  pics.rs
src/io/: mod.rs
src/io/pci/: mod.rs
src/io/time/: cmos.rs  mod.rs
src/memory/: graphic_support.rs  mod.rs
src/pci/: mod.rs
src/qemu/: mod.rs
src/sysapi/: Cargo.toml  mod.rs  proc.rs  syscall.rs
src/sysapi/src/: allocator.rs  call.rs  event.rs  font.rs  fs.rs  gui.rs  lib.rs  stdin.rs  syscall.rs  time.rs  window.rs
src/syskrnl/: clock.rs  gdt.rs  mod.rs  proc.rs  vga_buffer.rs  waker.rs
src/syskrnl/allocator/: bump.rs  linked_list.rs  mod.rs
src/syskrnl/event/: call.rs  mod.rs  service.rs
src/syskrnl/fs/: ahci.rs  ata.rs  bitmap.rs  block.rs  block_device.rs  device.rs  dir.rs  dir_entry.rs  mod.rs  oem.rs  super_block.rs  time.rs  wrap.rs
src/syskrnl/graphic/: color.rs  font.rs  mod.rs  text.rs  vbe.rs
src/syskrnl/gui/: cursor.rs  font.rs  mod.rs  panic.rs  status_bar.rs  window.rs
src/syskrnl/interrupts/: mod.rs  pics.rs
src/syskrnl/io/: ahci.rs  ata.rs  mod.rs  mouse.rs  pci.rs  qemu.rs
src/syskrnl/io/time/: cmos.rs  mod.rs
src/syskrnl/memory/: graphic_support.rs  mod.rs
src/syskrnl/schedule/: mod.rs  roundroll.rs
src/syskrnl/syscall/: call.rs  mod.rs  service.rs
src/syskrnl/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs
src/syskrnl/time/: cmos.rs  datetime.rs  mod.rs  pit.rs  sleep.rs  tsc.rs
src/usrbin/: Cargo.toml  Makefile  hello.rs
src/usrbin/.cargo/: config
src/usrbin/src/: lib.rs
src/usrbin/src/std/: fs.rs  io.rs  mod.rs
src/usrbin/src/sysapi/: allocator.rs  call.rs  mod.rs  proc.rs  syscall.rs
src/vga_buffer/: mod.rs
