[package]
name = "cinea-os"
description = "Cinea OS: A Hobby Operating System written on Rust"
version = "0.1.0"
edition = "2021"
authors = ["Zhang Yao <yaoozhang@icloud.com>"]
default-run = "cinea-os"

[[bin]]
name = "cinea-os"
path = "src/main.rs"

[[bin]]
name = "hello"
path = "src/usrbin/hello.rs"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc", "crossbeam-deque", "crossbeam-queue"] }
embedded-graphics = "0.8.0"
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
object = { version = "0.31.1", default-features = false, features = ["read"] }
pc-keyboard = "0.5.0"
pic8259 = "0.10.4"
rusttype = { version = "0.9.3", default-features = false, features = ["has-atomics", "libm", "libm-math"] }
spin = "0.9.8"
tinybmp = "0.5.0"
#ttf-parser = { version = "0.19.1", default-features = false, features = ["apple-layout", "glyph-names", "opentype-layout", "variable-fonts"] }
volatile = "0.2.3"
x86 = "0.52.0"
x86_64 = "0.14.10"

[package.metadata.bootimage]
build-command = ["xbuild"]
run-args = ["-serial", "stdio", "-m", "1G"]
