[package]
name = "cinea-os"
description = "Cinea OS: A Hobby Operating System written on Rust"
version = "0.1.0"
edition = "2021"
authors = ["Zhang Yao <yaoozhang@icloud.com>"]
default-run = "cinea-os"

[dependencies]
bit_field = "0.10.2"
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
cinea-os-sysapi = { version = "0.1.0", path = "src/sysapi" }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc", "crossbeam-deque", "crossbeam-queue"] }
embedded-graphics = "0.8.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
object = { version = "0.31.1", default-features = false, features = ["read"] }
oem_cp = "2.0.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.4"
runtime-format = { version = "0.1.3", default-features = false, features = [] }
rusttype = { version = "0.9.3", default-features = false, features = ["has-atomics", "libm", "libm-math"] }
spin = "0.9.8"
tinybmp = "0.5.0"
ufmt = "0.2.0"
#ttf-parser = { version = "0.19.1", default-features = false, features = ["apple-layout", "glyph-names", "opentype-layout", "variable-fonts"] }
volatile = "0.2.3"
x86 = "0.52.0"
x86_64 = "0.14.10"

[package.metadata.bootimage]
run-command = ["python", "start.py", "{}"]
run-args = ["-serial", "stdio", "-m", "1G", "-monitor", "telnet:localhost:4444,server,nowait",
    "-drive", "format=qcow2,file=datadisk.qcow2"]

[profile.release]
debug = 0
