[package]
name = "cinea-os-userspace"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cinea-os-sysapi = { version = "0.1.0", path = "../sysapi" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
ryu = "1.0.15"
spin = "0.9.8"
ufmt = "0.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
