[package]
name = "cinea-os-userspace"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cinea-os-sysapi = { version = "0.1.0", path = "../sysapi" }
conquer-once = { version = "0.4.0", default-features = false }
embedded-graphics = "0.8.0"
ryu = "1.0.15"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rusttype = { version = "0.9.3", default-features = false, features = ["has-atomics", "libm", "libm-math"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin = "0.9.8"
tinyrand = "0.5.0"
ufmt = "0.2.0"
